# btcusdt-market-data-collector

./: LICENSE  README.md  btcusdt_live_viewer.html  main.py  pyproject.toml  requirements.txt
scripts/: open_viewer.sh  run_collector.sh
